# filesystem_librarian_agent

./: .gitignore  README.md  file_agent.py  filesystem_agent.py
.streamlit/: config.toml
backend/: .gitignore  main.py  pyproject.toml  streamlit_app.py
backend/app/: instrument.py  supabase_postgres_utils.py  supabase_utils.py  telemetry_attributes.py
backend/app/api/routers/: ContextSerializer.py  chat.py
backend/app/dev/: marimo_chat.py
backend/app/engine/: determining_steps.py  draw_workflows.py  event_model.py  file_ops.py  file_workflow.py  get_agent.py  prompts.py  run_agent_workflow.py  run_workflow.py  source_model.py  suggestion_tool.py  vault_tool.py  workflow_utils.py
backend/app/engine/workflows/: orchestrate_suggest.py  para-folder-organization-agent-prompt copy.md  para-folder-organization-agent-prompt.md  para_workflow.py
backend/baml_src/: baml_run.py  resume.baml
backend/eval/: conversation_utils.py  evaluators.py  marimo_dataset_test.py  marimo_eval_test.py  tool_calling.py
backend/faresa/: app.py  chatbot_helpers.py
frontend/: middleware.ts  next.config.json  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/auth/verify-email/: page.tsx
frontend/app/components/: chat-section.tsx  directory-list.tsx  header.tsx  transform.ts
frontend/app/components/ui/: input.tsx
frontend/app/components/ui/chat/: ToolInvocationFileOperations.tsx  chat-message.tsx
frontend/app/providers/: auth-provider.tsx
