[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
fastapi = "*"
python-dotenv = "^1.0.0"
llama-index = "*"
llama-index-core = "*"
llama-index-agent-openai = "*"
openinference-semantic-conventions = "*"
openinference-instrumentation-llama-index = "*"
opentelemetry-exporter-otlp = "*"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
